docs: feedback handler
