# api/internal/models/feedback.go
@@ -2,4 +2,4 @@ package models
 
 type FeedbackRequest struct {
 	Message string `json:"message" example:"Good job!" binding:"required"`
-}
+} // @name FeedbackRequest
